# swiftkeychain

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
swift/: Package.resolved  Package.swift
swift/Sources/SwiftKeychain/: SwiftKeychain.swift
swiftkeychain/: __init__.py  cli.py
swiftkeychain/examples/: demo.py
